    before the possessive +. It now does.

38. The use of \K (reset reported match start) within a repeated possessive
    group such as (a\Kb)*+ was not working.

40. Document that the same character tables must be used at compile time and
    run time, and that the facility to pass tables to pcre_exec() and
    pcre_dfa_exec() is for use only with saved/restored patterns.


Version 8.33 28-May-2013
------------------------

1.  Added 'U' to some constants that are compared to unsigned integers, to
    avoid compiler signed/unsigned warnings. Added (int) casts to unsigned
    variables that are added to signed variables, to ensure the result is
    signed and can be negated.

2.  Applied patch by Daniel Richard G for quashing MSVC warnings to the
    CMake config files.

3.  Revise the creation of config.h.generic so that all boolean macros are
    #undefined, whereas non-boolean macros are #ifndef/#endif-ed. This makes
    overriding via -D on the command line possible.

4.  Changing the definition of the variable "op" in pcre_exec.c from pcre_uchar
    to unsigned int is reported to make a quite noticeable speed difference in
    a specific Windows environment. Testing on Linux did also appear to show
    some benefit (and it is clearly not harmful). Also fixed the definition of
    Xop which should be unsigned.

5.  Related to (4), changing the definition of the intermediate variable cc
    in repeated character loops from pcre_uchar to pcre_uint32 also gave speed
    improvements.

6.  Fix forward search in JIT when link size is 3 or greater. Also removed some
    unnecessary spaces.

7.  Adjust autogen.sh and configure.ac to lose warnings given by automake 1.12
    and later.

8.  Fix two buffer over read issues in 16 and 32 bit modes. Affects JIT only.

9.  Optimizing fast_forward_start_bits in JIT.

10. Adding support for callouts in JIT, and fixing some issues revealed
    during this work. Namely:
